# Personal-Blog-CTF

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  MODULE_DIVISION.md  PPT_DIVISION.md  PPT_SCRIPT.md  PROJECT_REPORT.md  PROJECT_REPORT_CN.md  README.md  environment.yml  project.puml  pyproject.toml
.github/workflows/: release.yml
app/: config.py  jwt_plugin.py  main.py  properties.py
docker_scripts/: bootstrap_db.sh  docker-entrypoint.sh
frontend/: admin.html  admin_login.html  app.js  ctf-widget.js  index.html  personal_space.html  style.css
scripts/: db_bootstrap.py  init_prod.sql  insert_mock.py  insert_mock.sql  remove_mock.py  remove_mock.sql  reset_ctf.sql  run_init_prod.py  run_reset_ctf.py
static/: app.js  config.json  style.css
